# autoHW

./: .gitignore  LICENSE  buildozer.spec  main.py  pyproject.toml  utils.py
screens/automation_screen/: automation_screen.kv  automation_screen.py
screens/logs_screen/: logs_screen.kv  logs_screen.py
screens/main_screen/: main_screen.kv  main_screen.py
