[tool.poetry]
name = "autohw"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
kivy = "^2.1.0"
kivymd = "^1.1.1"
kaki = "^0.1.8"
wakeonlan = "^3.0.0"
trio = "^0.22.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
