[tool.poetry]
name = "autohw"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
kivy = {url = "https://github.com/kivy/Kivy/archive/master.zip"}
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
kaki = "^0.1.8"
wakeonlan = "^3.0.0"
trio = "^0.22.1"
asks = "^3.0.0"
kivy-widgets = "^0.1.17"



[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
