[tool.poetry]
name = "autohw"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
kivy = "2.2.1"
kivymd = "^1.1.1"
kivy-widgets = "^0.1.17"
kaki = "^0.1.8"
wakeonlan = "^3.0.0"
trio = "^0.22.1"
asks = "^3.0.0"



[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
skip = [".buildozer", ".venv"]
skip_glob = [".buildozer/**", ".venv/**"]
